--- a/src/css/Playlist.css
+++ b/src/css/Playlist.css
@@ -25,6 +25,10 @@ img.rounded-circle {
 	padding: 0;
 }
 
+.playlist-item{
+	color: aliceblue;
+	background: transparent;
+}
 
 .playlist-item.hidden {
 	display: none;
@@ -54,21 +58,21 @@ img.rounded-circle {
 	margin-bottom: 20px;
 	box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
 	flex-direction: column;
+	background-color: aliceblue;
+	background: border-box;
 }
 
-.card-playlist .header {
-	background-color: aqua;
+.card-playlist {
+	background: transparent;
 }
 
 
 
 .card-playlist .card-block {
 	padding: 1.25rem;
+	background: transparent;
 }
 
-.card-playlist .header {
-	background-color: steelblue;
-}
 
 
 .container .page{
@@ -100,5 +104,5 @@ img.rounded-circle {
 }
 
 .play-pause{
-	color: steelblue;
+	color: deeppink;
 }
