--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased; */
+  /* -moz-osx-font-smoothing: grayscale; */
+  background-image: url("./img/people.jpg") ;
+			background-repeat:  no-repeat;
+      background-size:  cover;
+      background-attachment: fixed; 
 }
 
 code {
