--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
   background-image: url("./img/people.jpg") ;
-			background-repeat:  no-repeat;
-      background-size:  cover;
-      background-attachment: fixed; 
+			background-repeat:  round;
+      background-size:  initial;
+      /* background-attachment: fixed;  */
 }
 
 code {
