--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,11 @@ body {
   /* -moz-osx-font-smoothing: grayscale; */
   background-image: url("./img/people.jpg") ;
 			background-repeat:  no-repeat;
-      background-size:  cover;
+      background-size:  cover ;
       background-attachment: fixed; 
+      background-position: center;
+      padding-top: 10%;
+
 }
 
 code {
