--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,7 @@ body {
 			background-repeat:  no-repeat;
       background-size:  cover ;
       background-attachment: fixed; 
-      background-position: center;
-      padding-top: 10%;
+      /* background-position: center; */
 
 }
 
