12-Jun-20 : Removed the api key

--- a/src/css/Playlist.css
+++ b/src/css/Playlist.css
@@ -106,3 +106,12 @@ img.rounded-circle {
 .play-pause{
 	color: deeppink;
 }
+
+.song-language{
+	color:deeppink;
+}
+
+
+/* .song-composer{
+	color:deeppink;
+} */
