--- a/src/css/Playlist.css
+++ b/src/css/Playlist.css
@@ -26,7 +26,7 @@ img.rounded-circle {
 }
 
 .playlist-item{
-	color: aliceblue;
+	/* color: darkslategrey; */
 	background: transparent;
 }
 
@@ -108,7 +108,7 @@ img.rounded-circle {
 }
 
 .song-language{
-	color:deeppink;
+	color: darkaliceblue;
 }
 
 
