--- a/src/css/Playlist.css
+++ b/src/css/Playlist.css
@@ -74,7 +74,32 @@ img.rounded-circle {
 	text-align: center;
 }
 
+.wrapper {
+	position: relative;
+	/* padding-top: 56.25%;	 */
+  }
 
+  .songs {
+	padding-top: 40px;
+	text-align: left;
+  }
+
+  .videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .container .page{
 	padding-top: 130px
