--- a/src/css/Playlist.css
+++ b/src/css/Playlist.css
@@ -90,7 +90,7 @@ img.rounded-circle {
     width: 100%;
     position: relative;
     padding-bottom: 56.25%;
-    padding-top: 25px;
+    /* padding-top: 25px; */
     height: 0;
 }
 .videowrapper iframe {
